--- a/class/cert-exoscale.yml
+++ b/class/cert-exoscale.yml
@@ -9,3 +9,16 @@ parameters:
           - ${_base_directory}/component/main.jsonnet
         input_type: jsonnet
         output_path: cert-exoscale/
+      # kustomize
+      - input_paths:
+          - ${_base_directory}/component/cert-exoscale.jsonnet
+        input_type: jsonnet
+        output_path: ${_base_directory}/manifests/cert-exoscale
+      - input_paths:
+          - ${_kustomize_wrapper}
+        input_type: external
+        output_path: .
+        env_vars:
+          INPUT_DIR: ${_base_directory}/manifests/cert-exoscale
+        args:
+          - \${compiled_target_dir}/${_instance}/10_kustomize/cert-exoscale
