--- a/tests/golden/defaults/cert-exoscale/cert-exoscale/10_kustomize/cert-exoscale/cert-manager.io_v1_certificate_cert-manager-webhook-exoscale-ca.yaml
+++ b/tests/golden/defaults/cert-exoscale/cert-exoscale/10_kustomize/cert-exoscale/cert-manager.io_v1_certificate_cert-manager-webhook-exoscale-ca.yaml
@@ -7,9 +7,9 @@ metadata:
     heritage: Helm
     release: exoscale-webhook
   name: cert-manager-webhook-exoscale-ca
-  namespace: syn-cert-exoscale
+  namespace: syn-cert-manager
 spec:
-  commonName: ca.exoscale-webhook.syn-cert-exoscale
+  commonName: ca.exoscale-webhook.syn-cert-manager
   duration: 43800h0m0s
   isCA: true
   issuerRef:
