--- a/tests/golden/defaults/cert-exoscale/cert-exoscale/10_kustomize/cert-exoscale/cert-manager.io_v1_issuer_cert-manager-webhook-exoscale-selfsign.yaml
+++ b/tests/golden/defaults/cert-exoscale/cert-exoscale/10_kustomize/cert-exoscale/cert-manager.io_v1_issuer_cert-manager-webhook-exoscale-selfsign.yaml
@@ -7,6 +7,6 @@ metadata:
     heritage: Helm
     release: exoscale-webhook
   name: cert-manager-webhook-exoscale-selfsign
-  namespace: syn-cert-exoscale
+  namespace: syn-cert-manager
 spec:
   selfSigned: {}
