--- a/tests/golden/defaults/cert-exoscale/cert-exoscale/10_kustomize/cert-exoscale/rbac.authorization.k8s.io_v1_clusterrolebinding_cert-manager-webhook-exoscale:auth-delegator.yaml
+++ b/tests/golden/defaults/cert-exoscale/cert-exoscale/10_kustomize/cert-exoscale/rbac.authorization.k8s.io_v1_clusterrolebinding_cert-manager-webhook-exoscale:auth-delegator.yaml
@@ -15,4 +15,4 @@ subjects:
 - apiGroup: ""
   kind: ServiceAccount
   name: cert-manager-webhook-exoscale
-  namespace: syn-cert-exoscale
+  namespace: syn-cert-manager
