--- a/tests/golden/defaults/cert-exoscale/cert-exoscale/10_kustomize/cert-exoscale/v1_serviceaccount_cert-manager-webhook-exoscale.yaml
+++ b/tests/golden/defaults/cert-exoscale/cert-exoscale/10_kustomize/cert-exoscale/v1_serviceaccount_cert-manager-webhook-exoscale.yaml
@@ -7,4 +7,4 @@ metadata:
     heritage: Helm
     release: exoscale-webhook
   name: cert-manager-webhook-exoscale
-  namespace: syn-cert-exoscale
+  namespace: syn-cert-manager
