--- a/tests/golden/defaults/cert-exoscale/cert-exoscale/20_secret.yaml
+++ b/tests/golden/defaults/cert-exoscale/cert-exoscale/20_secret.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     name: exoscale-secret
   name: exoscale-secret
-  namespace: syn-cert-exoscale
+  namespace: syn-cert-manager
 stringData:
   EXOSCALE_API_KEY: t-silent-test-1234/c-green-test-1234/exoscale/cert_webhook/s3_access_key
   EXOSCALE_API_SECRET: t-silent-test-1234/c-green-test-1234/exoscale/cert_webhook/s3_secret_key
