--- a/tests/golden/defaults/cert-exoscale/cert-exoscale/10_kustomize/cert-exoscale/cert-manager.io_v1_issuer_cert-manager-webhook-exoscale-ca.yaml
+++ b/tests/golden/defaults/cert-exoscale/cert-exoscale/10_kustomize/cert-exoscale/cert-manager.io_v1_issuer_cert-manager-webhook-exoscale-ca.yaml
@@ -7,7 +7,7 @@ metadata:
     heritage: Helm
     release: exoscale-webhook
   name: cert-manager-webhook-exoscale-ca
-  namespace: syn-cert-exoscale
+  namespace: syn-cert-manager
 spec:
   ca:
     secretName: cert-manager-webhook-exoscale-ca
