--- a/tests/golden/defaults/cert-exoscale/cert-exoscale/10_kustomize/cert-exoscale/rbac.authorization.k8s.io_v1_role_cert-manager-webhook-exoscale:secrets-reader.yaml
+++ b/tests/golden/defaults/cert-exoscale/cert-exoscale/10_kustomize/cert-exoscale/rbac.authorization.k8s.io_v1_role_cert-manager-webhook-exoscale:secrets-reader.yaml
@@ -7,7 +7,7 @@ metadata:
     heritage: Helm
     release: exoscale-webhook
   name: cert-manager-webhook-exoscale:secrets-reader
-  namespace: syn-cert-exoscale
+  namespace: syn-cert-manager
 rules:
 - apiGroups:
   - ""
