--- a/tests/golden/defaults/cert-exoscale/cert-exoscale/10_kustomize/cert-exoscale/rbac.authorization.k8s.io_v1_rolebinding_cert-manager-webhook-exoscale:secrets-reader.yaml
+++ b/tests/golden/defaults/cert-exoscale/cert-exoscale/10_kustomize/cert-exoscale/rbac.authorization.k8s.io_v1_rolebinding_cert-manager-webhook-exoscale:secrets-reader.yaml
@@ -7,7 +7,7 @@ metadata:
     heritage: Helm
     release: exoscale-webhook
   name: cert-manager-webhook-exoscale:secrets-reader
-  namespace: syn-cert-exoscale
+  namespace: syn-cert-manager
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -16,4 +16,4 @@ subjects:
 - apiGroup: ""
   kind: ServiceAccount
   name: cert-manager-webhook-exoscale
-  namespace: syn-cert-exoscale
+  namespace: syn-cert-manager
