--- a/tests/golden/defaults/cert-exoscale/cert-exoscale/10_kustomize/cert-exoscale/v1_service_cert-manager-webhook-exoscale.yaml
+++ b/tests/golden/defaults/cert-exoscale/cert-exoscale/10_kustomize/cert-exoscale/v1_service_cert-manager-webhook-exoscale.yaml
@@ -7,7 +7,7 @@ metadata:
     heritage: Helm
     release: exoscale-webhook
   name: cert-manager-webhook-exoscale
-  namespace: syn-cert-exoscale
+  namespace: syn-cert-manager
 spec:
   ports:
   - name: https
